FlexBison/parser.output
Gramática

    0 $accept: program $end

    1 program: statement_list

    2 block: LKEY statement_list RKEY
    3      | LKEY RKEY

    4 statement_list: statement
    5               | statement_list statement

    6 statement: POSITION IDENTIFIER COLON relexpression
    7          | IDENTIFIER EQUAL relexpression
    8          | PRINT LPAREN print_list RPAREN
    9          | IF LPAREN relexpression RPAREN block
   10          | IF LPAREN relexpression RPAREN block ELSE block
   11          | WHILE LPAREN relexpression RPAREN block
   12          | FUNCTION_DECLARATION IDENTIFIER LPAREN parameter_list RPAREN block
   13          | FUNCTION_CALL IDENTIFIER LPAREN parameter_list RPAREN
   14          | SHOOT relexpression

   15 parameter_list: IDENTIFIER
   16               | parameter_list COMMA IDENTIFIER

   17 print_list: relexpression
   18           | print_list COMMA relexpression

   19 relexpression: expression EQUAL_TO expression
   20              | expression GT expression
   21              | expression LT expression
   22              | expression

   23 expression: term PLUS term
   24           | term MINUS term
   25           | term OR term
   26           | term

   27 term: factor
   28     | term MULT factor
   29     | term DIV factor
   30     | term AND factor

   31 factor: INTEGER
   32       | STRING
   33       | COORDINATE
   34       | IDENTIFIER
   35       | PLUS factor
   36       | MINUS factor
   37       | NOT factor
   38       | LPAREN relexpression RPAREN


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    IDENTIFIER (258) 6 7 12 13 15 16 34
    STRING (259) 32
    INTEGER (260) 31
    COORDINATE (261) 33
    WHILE (262) 11
    IF (263) 9 10
    ELSE (264) 10
    PRINT (265) 8
    SHOOT (266) 14
    POSITION (267) 6
    FUNCTION_DECLARATION (268) 12
    FUNCTION_CALL (269) 13
    EQUAL (270) 7
    NOT (271) 37
    PLUS (272) 23 35
    MINUS (273) 24 36
    MULT (274) 28
    DIV (275) 29
    AND (276) 30
    OR (277) 25
    EQUAL_TO (278) 19
    GT (279) 20
    LT (280) 21
    LPAREN (281) 8 9 10 11 12 13 38
    RPAREN (282) 8 9 10 11 12 13 38
    LKEY (283) 2 3
    RKEY (284) 2 3
    COMMA (285) 16 18
    COLON (286) 6


Não terminais com as regras onde eles aparecem

    $accept (32)
        à esquerda: 0
    program (33)
        à esquerda: 1
        à direita: 0
    block (34)
        à esquerda: 2 3
        à direita: 9 10 11 12
    statement_list (35)
        à esquerda: 4 5
        à direita: 1 2 5
    statement (36)
        à esquerda: 6 7 8 9 10 11 12 13 14
        à direita: 4 5
    parameter_list (37)
        à esquerda: 15 16
        à direita: 12 13 16
    print_list (38)
        à esquerda: 17 18
        à direita: 8 18
    relexpression (39)
        à esquerda: 19 20 21 22
        à direita: 6 7 9 10 11 14 17 18 38
    expression (40)
        à esquerda: 23 24 25 26
        à direita: 19 20 21 22
    term (41)
        à esquerda: 27 28 29 30
        à direita: 23 24 25 26 28 29 30
    factor (42)
        à esquerda: 31 32 33 34 35 36 37 38
        à direita: 27 28 29 30 35 36 37


Estado 0

    0 $accept: . program $end

    IDENTIFIER            deslocar, e ir ao estado 1
    WHILE                 deslocar, e ir ao estado 2
    IF                    deslocar, e ir ao estado 3
    PRINT                 deslocar, e ir ao estado 4
    SHOOT                 deslocar, e ir ao estado 5
    POSITION              deslocar, e ir ao estado 6
    FUNCTION_DECLARATION  deslocar, e ir ao estado 7
    FUNCTION_CALL         deslocar, e ir ao estado 8

    program         ir ao estado 9
    statement_list  ir ao estado 10
    statement       ir ao estado 11


Estado 1

    7 statement: IDENTIFIER . EQUAL relexpression

    EQUAL  deslocar, e ir ao estado 12


Estado 2

   11 statement: WHILE . LPAREN relexpression RPAREN block

    LPAREN  deslocar, e ir ao estado 13


Estado 3

    9 statement: IF . LPAREN relexpression RPAREN block
   10          | IF . LPAREN relexpression RPAREN block ELSE block

    LPAREN  deslocar, e ir ao estado 14


Estado 4

    8 statement: PRINT . LPAREN print_list RPAREN

    LPAREN  deslocar, e ir ao estado 15


Estado 5

   14 statement: SHOOT . relexpression

    IDENTIFIER  deslocar, e ir ao estado 16
    STRING      deslocar, e ir ao estado 17
    INTEGER     deslocar, e ir ao estado 18
    COORDINATE  deslocar, e ir ao estado 19
    NOT         deslocar, e ir ao estado 20
    PLUS        deslocar, e ir ao estado 21
    MINUS       deslocar, e ir ao estado 22
    LPAREN      deslocar, e ir ao estado 23

    relexpression  ir ao estado 24
    expression     ir ao estado 25
    term           ir ao estado 26
    factor         ir ao estado 27


Estado 6

    6 statement: POSITION . IDENTIFIER COLON relexpression

    IDENTIFIER  deslocar, e ir ao estado 28


Estado 7

   12 statement: FUNCTION_DECLARATION . IDENTIFIER LPAREN parameter_list RPAREN block

    IDENTIFIER  deslocar, e ir ao estado 29


Estado 8

   13 statement: FUNCTION_CALL . IDENTIFIER LPAREN parameter_list RPAREN

    IDENTIFIER  deslocar, e ir ao estado 30


Estado 9

    0 $accept: program . $end

    $end  deslocar, e ir ao estado 31


Estado 10

    1 program: statement_list .
    5 statement_list: statement_list . statement

    IDENTIFIER            deslocar, e ir ao estado 1
    WHILE                 deslocar, e ir ao estado 2
    IF                    deslocar, e ir ao estado 3
    PRINT                 deslocar, e ir ao estado 4
    SHOOT                 deslocar, e ir ao estado 5
    POSITION              deslocar, e ir ao estado 6
    FUNCTION_DECLARATION  deslocar, e ir ao estado 7
    FUNCTION_CALL         deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 1 (program)

    statement  ir ao estado 32


Estado 11

    4 statement_list: statement .

    $padrão  reduzir usando a regra 4 (statement_list)


Estado 12

    7 statement: IDENTIFIER EQUAL . relexpression

    IDENTIFIER  deslocar, e ir ao estado 16
    STRING      deslocar, e ir ao estado 17
    INTEGER     deslocar, e ir ao estado 18
    COORDINATE  deslocar, e ir ao estado 19
    NOT         deslocar, e ir ao estado 20
    PLUS        deslocar, e ir ao estado 21
    MINUS       deslocar, e ir ao estado 22
    LPAREN      deslocar, e ir ao estado 23

    relexpression  ir ao estado 33
    expression     ir ao estado 25
    term           ir ao estado 26
    factor         ir ao estado 27


Estado 13

   11 statement: WHILE LPAREN . relexpression RPAREN block

    IDENTIFIER  deslocar, e ir ao estado 16
    STRING      deslocar, e ir ao estado 17
    INTEGER     deslocar, e ir ao estado 18
    COORDINATE  deslocar, e ir ao estado 19
    NOT         deslocar, e ir ao estado 20
    PLUS        deslocar, e ir ao estado 21
    MINUS       deslocar, e ir ao estado 22
    LPAREN      deslocar, e ir ao estado 23

    relexpression  ir ao estado 34
    expression     ir ao estado 25
    term           ir ao estado 26
    factor         ir ao estado 27


Estado 14

    9 statement: IF LPAREN . relexpression RPAREN block
   10          | IF LPAREN . relexpression RPAREN block ELSE block

    IDENTIFIER  deslocar, e ir ao estado 16
    STRING      deslocar, e ir ao estado 17
    INTEGER     deslocar, e ir ao estado 18
    COORDINATE  deslocar, e ir ao estado 19
    NOT         deslocar, e ir ao estado 20
    PLUS        deslocar, e ir ao estado 21
    MINUS       deslocar, e ir ao estado 22
    LPAREN      deslocar, e ir ao estado 23

    relexpression  ir ao estado 35
    expression     ir ao estado 25
    term           ir ao estado 26
    factor         ir ao estado 27


Estado 15

    8 statement: PRINT LPAREN . print_list RPAREN

    IDENTIFIER  deslocar, e ir ao estado 16
    STRING      deslocar, e ir ao estado 17
    INTEGER     deslocar, e ir ao estado 18
    COORDINATE  deslocar, e ir ao estado 19
    NOT         deslocar, e ir ao estado 20
    PLUS        deslocar, e ir ao estado 21
    MINUS       deslocar, e ir ao estado 22
    LPAREN      deslocar, e ir ao estado 23

    print_list     ir ao estado 36
    relexpression  ir ao estado 37
    expression     ir ao estado 25
    term           ir ao estado 26
    factor         ir ao estado 27


Estado 16

   34 factor: IDENTIFIER .

    $padrão  reduzir usando a regra 34 (factor)


Estado 17

   32 factor: STRING .

    $padrão  reduzir usando a regra 32 (factor)


Estado 18

   31 factor: INTEGER .

    $padrão  reduzir usando a regra 31 (factor)


Estado 19

   33 factor: COORDINATE .

    $padrão  reduzir usando a regra 33 (factor)


Estado 20

   37 factor: NOT . factor

    IDENTIFIER  deslocar, e ir ao estado 16
    STRING      deslocar, e ir ao estado 17
    INTEGER     deslocar, e ir ao estado 18
    COORDINATE  deslocar, e ir ao estado 19
    NOT         deslocar, e ir ao estado 20
    PLUS        deslocar, e ir ao estado 21
    MINUS       deslocar, e ir ao estado 22
    LPAREN      deslocar, e ir ao estado 23

    factor  ir ao estado 38


Estado 21

   35 factor: PLUS . factor

    IDENTIFIER  deslocar, e ir ao estado 16
    STRING      deslocar, e ir ao estado 17
    INTEGER     deslocar, e ir ao estado 18
    COORDINATE  deslocar, e ir ao estado 19
    NOT         deslocar, e ir ao estado 20
    PLUS        deslocar, e ir ao estado 21
    MINUS       deslocar, e ir ao estado 22
    LPAREN      deslocar, e ir ao estado 23

    factor  ir ao estado 39


Estado 22

   36 factor: MINUS . factor

    IDENTIFIER  deslocar, e ir ao estado 16
    STRING      deslocar, e ir ao estado 17
    INTEGER     deslocar, e ir ao estado 18
    COORDINATE  deslocar, e ir ao estado 19
    NOT         deslocar, e ir ao estado 20
    PLUS        deslocar, e ir ao estado 21
    MINUS       deslocar, e ir ao estado 22
    LPAREN      deslocar, e ir ao estado 23

    factor  ir ao estado 40


Estado 23

   38 factor: LPAREN . relexpression RPAREN

    IDENTIFIER  deslocar, e ir ao estado 16
    STRING      deslocar, e ir ao estado 17
    INTEGER     deslocar, e ir ao estado 18
    COORDINATE  deslocar, e ir ao estado 19
    NOT         deslocar, e ir ao estado 20
    PLUS        deslocar, e ir ao estado 21
    MINUS       deslocar, e ir ao estado 22
    LPAREN      deslocar, e ir ao estado 23

    relexpression  ir ao estado 41
    expression     ir ao estado 25
    term           ir ao estado 26
    factor         ir ao estado 27


Estado 24

   14 statement: SHOOT relexpression .

    $padrão  reduzir usando a regra 14 (statement)


Estado 25

   19 relexpression: expression . EQUAL_TO expression
   20              | expression . GT expression
   21              | expression . LT expression
   22              | expression .

    EQUAL_TO  deslocar, e ir ao estado 42
    GT        deslocar, e ir ao estado 43
    LT        deslocar, e ir ao estado 44

    $padrão  reduzir usando a regra 22 (relexpression)


Estado 26

   23 expression: term . PLUS term
   24           | term . MINUS term
   25           | term . OR term
   26           | term .
   28 term: term . MULT factor
   29     | term . DIV factor
   30     | term . AND factor

    PLUS   deslocar, e ir ao estado 45
    MINUS  deslocar, e ir ao estado 46
    MULT   deslocar, e ir ao estado 47
    DIV    deslocar, e ir ao estado 48
    AND    deslocar, e ir ao estado 49
    OR     deslocar, e ir ao estado 50

    $padrão  reduzir usando a regra 26 (expression)


Estado 27

   27 term: factor .

    $padrão  reduzir usando a regra 27 (term)


Estado 28

    6 statement: POSITION IDENTIFIER . COLON relexpression

    COLON  deslocar, e ir ao estado 51


Estado 29

   12 statement: FUNCTION_DECLARATION IDENTIFIER . LPAREN parameter_list RPAREN block

    LPAREN  deslocar, e ir ao estado 52


Estado 30

   13 statement: FUNCTION_CALL IDENTIFIER . LPAREN parameter_list RPAREN

    LPAREN  deslocar, e ir ao estado 53


Estado 31

    0 $accept: program $end .

    $padrão  aceitar


Estado 32

    5 statement_list: statement_list statement .

    $padrão  reduzir usando a regra 5 (statement_list)


Estado 33

    7 statement: IDENTIFIER EQUAL relexpression .

    $padrão  reduzir usando a regra 7 (statement)


Estado 34

   11 statement: WHILE LPAREN relexpression . RPAREN block

    RPAREN  deslocar, e ir ao estado 54


Estado 35

    9 statement: IF LPAREN relexpression . RPAREN block
   10          | IF LPAREN relexpression . RPAREN block ELSE block

    RPAREN  deslocar, e ir ao estado 55


Estado 36

    8 statement: PRINT LPAREN print_list . RPAREN
   18 print_list: print_list . COMMA relexpression

    RPAREN  deslocar, e ir ao estado 56
    COMMA   deslocar, e ir ao estado 57


Estado 37

   17 print_list: relexpression .

    $padrão  reduzir usando a regra 17 (print_list)


Estado 38

   37 factor: NOT factor .

    $padrão  reduzir usando a regra 37 (factor)


Estado 39

   35 factor: PLUS factor .

    $padrão  reduzir usando a regra 35 (factor)


Estado 40

   36 factor: MINUS factor .

    $padrão  reduzir usando a regra 36 (factor)


Estado 41

   38 factor: LPAREN relexpression . RPAREN

    RPAREN  deslocar, e ir ao estado 58


Estado 42

   19 relexpression: expression EQUAL_TO . expression

    IDENTIFIER  deslocar, e ir ao estado 16
    STRING      deslocar, e ir ao estado 17
    INTEGER     deslocar, e ir ao estado 18
    COORDINATE  deslocar, e ir ao estado 19
    NOT         deslocar, e ir ao estado 20
    PLUS        deslocar, e ir ao estado 21
    MINUS       deslocar, e ir ao estado 22
    LPAREN      deslocar, e ir ao estado 23

    expression  ir ao estado 59
    term        ir ao estado 26
    factor      ir ao estado 27


Estado 43

   20 relexpression: expression GT . expression

    IDENTIFIER  deslocar, e ir ao estado 16
    STRING      deslocar, e ir ao estado 17
    INTEGER     deslocar, e ir ao estado 18
    COORDINATE  deslocar, e ir ao estado 19
    NOT         deslocar, e ir ao estado 20
    PLUS        deslocar, e ir ao estado 21
    MINUS       deslocar, e ir ao estado 22
    LPAREN      deslocar, e ir ao estado 23

    expression  ir ao estado 60
    term        ir ao estado 26
    factor      ir ao estado 27


Estado 44

   21 relexpression: expression LT . expression

    IDENTIFIER  deslocar, e ir ao estado 16
    STRING      deslocar, e ir ao estado 17
    INTEGER     deslocar, e ir ao estado 18
    COORDINATE  deslocar, e ir ao estado 19
    NOT         deslocar, e ir ao estado 20
    PLUS        deslocar, e ir ao estado 21
    MINUS       deslocar, e ir ao estado 22
    LPAREN      deslocar, e ir ao estado 23

    expression  ir ao estado 61
    term        ir ao estado 26
    factor      ir ao estado 27


Estado 45

   23 expression: term PLUS . term

    IDENTIFIER  deslocar, e ir ao estado 16
    STRING      deslocar, e ir ao estado 17
    INTEGER     deslocar, e ir ao estado 18
    COORDINATE  deslocar, e ir ao estado 19
    NOT         deslocar, e ir ao estado 20
    PLUS        deslocar, e ir ao estado 21
    MINUS       deslocar, e ir ao estado 22
    LPAREN      deslocar, e ir ao estado 23

    term    ir ao estado 62
    factor  ir ao estado 27


Estado 46

   24 expression: term MINUS . term

    IDENTIFIER  deslocar, e ir ao estado 16
    STRING      deslocar, e ir ao estado 17
    INTEGER     deslocar, e ir ao estado 18
    COORDINATE  deslocar, e ir ao estado 19
    NOT         deslocar, e ir ao estado 20
    PLUS        deslocar, e ir ao estado 21
    MINUS       deslocar, e ir ao estado 22
    LPAREN      deslocar, e ir ao estado 23

    term    ir ao estado 63
    factor  ir ao estado 27


Estado 47

   28 term: term MULT . factor

    IDENTIFIER  deslocar, e ir ao estado 16
    STRING      deslocar, e ir ao estado 17
    INTEGER     deslocar, e ir ao estado 18
    COORDINATE  deslocar, e ir ao estado 19
    NOT         deslocar, e ir ao estado 20
    PLUS        deslocar, e ir ao estado 21
    MINUS       deslocar, e ir ao estado 22
    LPAREN      deslocar, e ir ao estado 23

    factor  ir ao estado 64


Estado 48

   29 term: term DIV . factor

    IDENTIFIER  deslocar, e ir ao estado 16
    STRING      deslocar, e ir ao estado 17
    INTEGER     deslocar, e ir ao estado 18
    COORDINATE  deslocar, e ir ao estado 19
    NOT         deslocar, e ir ao estado 20
    PLUS        deslocar, e ir ao estado 21
    MINUS       deslocar, e ir ao estado 22
    LPAREN      deslocar, e ir ao estado 23

    factor  ir ao estado 65


Estado 49

   30 term: term AND . factor

    IDENTIFIER  deslocar, e ir ao estado 16
    STRING      deslocar, e ir ao estado 17
    INTEGER     deslocar, e ir ao estado 18
    COORDINATE  deslocar, e ir ao estado 19
    NOT         deslocar, e ir ao estado 20
    PLUS        deslocar, e ir ao estado 21
    MINUS       deslocar, e ir ao estado 22
    LPAREN      deslocar, e ir ao estado 23

    factor  ir ao estado 66


Estado 50

   25 expression: term OR . term

    IDENTIFIER  deslocar, e ir ao estado 16
    STRING      deslocar, e ir ao estado 17
    INTEGER     deslocar, e ir ao estado 18
    COORDINATE  deslocar, e ir ao estado 19
    NOT         deslocar, e ir ao estado 20
    PLUS        deslocar, e ir ao estado 21
    MINUS       deslocar, e ir ao estado 22
    LPAREN      deslocar, e ir ao estado 23

    term    ir ao estado 67
    factor  ir ao estado 27


Estado 51

    6 statement: POSITION IDENTIFIER COLON . relexpression

    IDENTIFIER  deslocar, e ir ao estado 16
    STRING      deslocar, e ir ao estado 17
    INTEGER     deslocar, e ir ao estado 18
    COORDINATE  deslocar, e ir ao estado 19
    NOT         deslocar, e ir ao estado 20
    PLUS        deslocar, e ir ao estado 21
    MINUS       deslocar, e ir ao estado 22
    LPAREN      deslocar, e ir ao estado 23

    relexpression  ir ao estado 68
    expression     ir ao estado 25
    term           ir ao estado 26
    factor         ir ao estado 27


Estado 52

   12 statement: FUNCTION_DECLARATION IDENTIFIER LPAREN . parameter_list RPAREN block

    IDENTIFIER  deslocar, e ir ao estado 69

    parameter_list  ir ao estado 70


Estado 53

   13 statement: FUNCTION_CALL IDENTIFIER LPAREN . parameter_list RPAREN

    IDENTIFIER  deslocar, e ir ao estado 69

    parameter_list  ir ao estado 71


Estado 54

   11 statement: WHILE LPAREN relexpression RPAREN . block

    LKEY  deslocar, e ir ao estado 72

    block  ir ao estado 73


Estado 55

    9 statement: IF LPAREN relexpression RPAREN . block
   10          | IF LPAREN relexpression RPAREN . block ELSE block

    LKEY  deslocar, e ir ao estado 72

    block  ir ao estado 74


Estado 56

    8 statement: PRINT LPAREN print_list RPAREN .

    $padrão  reduzir usando a regra 8 (statement)


Estado 57

   18 print_list: print_list COMMA . relexpression

    IDENTIFIER  deslocar, e ir ao estado 16
    STRING      deslocar, e ir ao estado 17
    INTEGER     deslocar, e ir ao estado 18
    COORDINATE  deslocar, e ir ao estado 19
    NOT         deslocar, e ir ao estado 20
    PLUS        deslocar, e ir ao estado 21
    MINUS       deslocar, e ir ao estado 22
    LPAREN      deslocar, e ir ao estado 23

    relexpression  ir ao estado 75
    expression     ir ao estado 25
    term           ir ao estado 26
    factor         ir ao estado 27


Estado 58

   38 factor: LPAREN relexpression RPAREN .

    $padrão  reduzir usando a regra 38 (factor)


Estado 59

   19 relexpression: expression EQUAL_TO expression .

    $padrão  reduzir usando a regra 19 (relexpression)


Estado 60

   20 relexpression: expression GT expression .

    $padrão  reduzir usando a regra 20 (relexpression)


Estado 61

   21 relexpression: expression LT expression .

    $padrão  reduzir usando a regra 21 (relexpression)


Estado 62

   23 expression: term PLUS term .
   28 term: term . MULT factor
   29     | term . DIV factor
   30     | term . AND factor

    MULT  deslocar, e ir ao estado 47
    DIV   deslocar, e ir ao estado 48
    AND   deslocar, e ir ao estado 49

    $padrão  reduzir usando a regra 23 (expression)


Estado 63

   24 expression: term MINUS term .
   28 term: term . MULT factor
   29     | term . DIV factor
   30     | term . AND factor

    MULT  deslocar, e ir ao estado 47
    DIV   deslocar, e ir ao estado 48
    AND   deslocar, e ir ao estado 49

    $padrão  reduzir usando a regra 24 (expression)


Estado 64

   28 term: term MULT factor .

    $padrão  reduzir usando a regra 28 (term)


Estado 65

   29 term: term DIV factor .

    $padrão  reduzir usando a regra 29 (term)


Estado 66

   30 term: term AND factor .

    $padrão  reduzir usando a regra 30 (term)


Estado 67

   25 expression: term OR term .
   28 term: term . MULT factor
   29     | term . DIV factor
   30     | term . AND factor

    MULT  deslocar, e ir ao estado 47
    DIV   deslocar, e ir ao estado 48
    AND   deslocar, e ir ao estado 49

    $padrão  reduzir usando a regra 25 (expression)


Estado 68

    6 statement: POSITION IDENTIFIER COLON relexpression .

    $padrão  reduzir usando a regra 6 (statement)


Estado 69

   15 parameter_list: IDENTIFIER .

    $padrão  reduzir usando a regra 15 (parameter_list)


Estado 70

   12 statement: FUNCTION_DECLARATION IDENTIFIER LPAREN parameter_list . RPAREN block
   16 parameter_list: parameter_list . COMMA IDENTIFIER

    RPAREN  deslocar, e ir ao estado 76
    COMMA   deslocar, e ir ao estado 77


Estado 71

   13 statement: FUNCTION_CALL IDENTIFIER LPAREN parameter_list . RPAREN
   16 parameter_list: parameter_list . COMMA IDENTIFIER

    RPAREN  deslocar, e ir ao estado 78
    COMMA   deslocar, e ir ao estado 77


Estado 72

    2 block: LKEY . statement_list RKEY
    3      | LKEY . RKEY

    IDENTIFIER            deslocar, e ir ao estado 1
    WHILE                 deslocar, e ir ao estado 2
    IF                    deslocar, e ir ao estado 3
    PRINT                 deslocar, e ir ao estado 4
    SHOOT                 deslocar, e ir ao estado 5
    POSITION              deslocar, e ir ao estado 6
    FUNCTION_DECLARATION  deslocar, e ir ao estado 7
    FUNCTION_CALL         deslocar, e ir ao estado 8
    RKEY                  deslocar, e ir ao estado 79

    statement_list  ir ao estado 80
    statement       ir ao estado 11


Estado 73

   11 statement: WHILE LPAREN relexpression RPAREN block .

    $padrão  reduzir usando a regra 11 (statement)


Estado 74

    9 statement: IF LPAREN relexpression RPAREN block .
   10          | IF LPAREN relexpression RPAREN block . ELSE block

    ELSE  deslocar, e ir ao estado 81

    $padrão  reduzir usando a regra 9 (statement)


Estado 75

   18 print_list: print_list COMMA relexpression .

    $padrão  reduzir usando a regra 18 (print_list)


Estado 76

   12 statement: FUNCTION_DECLARATION IDENTIFIER LPAREN parameter_list RPAREN . block

    LKEY  deslocar, e ir ao estado 72

    block  ir ao estado 82


Estado 77

   16 parameter_list: parameter_list COMMA . IDENTIFIER

    IDENTIFIER  deslocar, e ir ao estado 83


Estado 78

   13 statement: FUNCTION_CALL IDENTIFIER LPAREN parameter_list RPAREN .

    $padrão  reduzir usando a regra 13 (statement)


Estado 79

    3 block: LKEY RKEY .

    $padrão  reduzir usando a regra 3 (block)


Estado 80

    2 block: LKEY statement_list . RKEY
    5 statement_list: statement_list . statement

    IDENTIFIER            deslocar, e ir ao estado 1
    WHILE                 deslocar, e ir ao estado 2
    IF                    deslocar, e ir ao estado 3
    PRINT                 deslocar, e ir ao estado 4
    SHOOT                 deslocar, e ir ao estado 5
    POSITION              deslocar, e ir ao estado 6
    FUNCTION_DECLARATION  deslocar, e ir ao estado 7
    FUNCTION_CALL         deslocar, e ir ao estado 8
    RKEY                  deslocar, e ir ao estado 84

    statement  ir ao estado 32


Estado 81

   10 statement: IF LPAREN relexpression RPAREN block ELSE . block

    LKEY  deslocar, e ir ao estado 72

    block  ir ao estado 85


Estado 82

   12 statement: FUNCTION_DECLARATION IDENTIFIER LPAREN parameter_list RPAREN block .

    $padrão  reduzir usando a regra 12 (statement)


Estado 83

   16 parameter_list: parameter_list COMMA IDENTIFIER .

    $padrão  reduzir usando a regra 16 (parameter_list)


Estado 84

    2 block: LKEY statement_list RKEY .

    $padrão  reduzir usando a regra 2 (block)


Estado 85

   10 statement: IF LPAREN relexpression RPAREN block ELSE block .

    $padrão  reduzir usando a regra 10 (statement)
